@@ -1,4 +1,5 @@
 <configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:zcml="http://namespaces.zope.org/zcml"
            xmlns:five="http://namespaces.zope.org/five"
            xmlns:i18n="http://namespaces.zope.org/i18n"
            xmlns:gs="http://namespaces.zope.org/genericsetup"
@@ -115,6 +116,14 @@
       />
 
   <include package=".browser"/>
+
+  <!-- Configure package providing CAPTCHA, if available -->
+  <configure zcml:condition="installed collective.captcha">
+      <include package="collective.captcha"/>
+  </configure>
+  <configure zcml:condition="not-installed collective.captcha">
+      <include package="collective.recaptcha"/>
+  </configure>
   
   <subscriber handler=".events.form_adapter_pasted" />  
 
