@@ -3,3 +3,4 @@
 from richlabel import RichLabelWidget
 from fieldset import FieldsetStartWidget, FieldsetEndWidget
 from likertWidget import LikertWidget
+from captcha import CaptchaWidget
