@@ -1,8 +1,14 @@
 1.5b3
 
- -  guess_content_type, used in htmlValue in the file field, needs the same
-    import protection used in the save data adapter, or it will fail in 
-    later Zopes. (Thanks, Tom Gross)
+ - Merged CAPTCHA field implementation from PFGCaptchaField (thanks Thomas
+   Buchberger), and added collective.recaptcha as a dependency.
+   collective.captcha will be used instead if it is present in the Python
+   environment.
+   (David Glick)
+
+ - guess_content_type, used in htmlValue in the file field, needs the same
+   import protection used in the save data adapter, or it will fail in 
+   later Zopes. (Thanks, Tom Gross)
 
 1.5b2
 
